feat: [판매자용] 회원가입 회원정보 입력 기능구현, 비밀번호 유효성 검사 수정
### 비밀번호 유효성 검사 수정
- 6자 이상되도록 수정

### 회원정보 입력 기능 구현
- firebase realtimedatabase
- SignUpInfoFragment

--- a/Swimmer_seller/app/build.gradle
+++ b/Swimmer_seller/app/build.gradle
@@ -60,5 +60,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     //Authentication
     implementation "com.google.firebase:firebase-auth-ktx"
+    //RealtimeDatabase
+    implementation "com.google.firebase:firebase-database-ktx"
 
 }
