--- a/Swimmer_customer/app/build.gradle
+++ b/Swimmer_customer/app/build.gradle
@@ -33,8 +33,8 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    viewBinding {
-        enabled = true
+    buildFeatures {
+        dataBinding true
     }
 }
 
