feat: [판매자용] 비밀번호 재설정 기능 구현
- 가입되지 않은 이메일의 경우 해당 내용을 알려주는 토스트

--- a/Swimmer_seller/app/build.gradle
+++ b/Swimmer_seller/app/build.gradle
@@ -62,5 +62,7 @@ dependencies {
     implementation "com.google.firebase:firebase-auth-ktx"
     //RealtimeDatabase
     implementation "com.google.firebase:firebase-database-ktx"
+    //Cloud Functions
+    implementation("com.google.firebase:firebase-functions-ktx")
 
 }
