--- a/Swimmer_customer/app/src/main/AndroidManifest.xml
+++ b/Swimmer_customer/app/src/main/AndroidManifest.xml
@@ -19,10 +19,7 @@
 
         <activity
             android:name=".ui.main.MainActivity"
-<<<<<<< HEAD
-=======
-            android:theme="@style/AppTheme.Splash"
->>>>>>> upstream/main
+            android:theme="@style/Theme.Swimmer_customer"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
