--- a/Swimmer_seller/build.gradle
+++ b/Swimmer_seller/build.gradle
@@ -1,4 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+// Safe Args
+buildscript {
+    repositories {
+        google()
+    }
+    dependencies {
+        def nav_version = "2.5.3"
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
+    }
+}
+
 plugins {
     id 'com.android.application' version '8.0.2' apply false
     id 'com.android.library' version '8.0.2' apply false
@@ -6,5 +17,4 @@ plugins {
 
     // Add the dependency for the Google services Gradle plugin
     id 'com.google.gms.google-services' version '4.3.15' apply false
-
 }
