회원가입 최적화

--- a/Swimmer_customer/app/build.gradle
+++ b/Swimmer_customer/app/build.gradle
@@ -44,6 +44,7 @@ android {
 
 dependencies {
     //auth
+    implementation 'androidx.cardview:cardview:1.0.0'
     implementation "androidx.activity:activity-ktx:1.7.2"
     implementation "androidx.fragment:fragment-ktx:1.6.1"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
