--- a/Swimmer_customer/app/src/main/AndroidManifest.xml
+++ b/Swimmer_customer/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
 
         <activity
             android:name=".ui.main.MainActivity"
-            android:theme="@style/Theme.Swimmer_customer"
+            android:theme="@style/AppTheme.Splash"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
