--- a/Swimmer_customer/app/build.gradle
+++ b/Swimmer_customer/app/build.gradle
@@ -90,5 +90,8 @@ dependencies {
     // android veil
     implementation "com.github.skydoves:androidveil:1.1.3"
 
+    // lottie
+    implementation "com.airbnb.android:lottie:6.1.0"
+
 
 }
