--- a/Swimmer_seller/app/build.gradle
+++ b/Swimmer_seller/app/build.gradle
@@ -75,4 +75,7 @@ dependencies {
     implementation("com.google.firebase:firebase-functions-ktx")
     // Stoarage
     implementation 'com.google.firebase:firebase-storage:20.2.1'
+    // Glide - 안드로이드용 이미지 로딩 라이브러리
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
