--- a/Swimmer_customer/app/build.gradle
+++ b/Swimmer_customer/app/build.gradle
@@ -36,6 +36,7 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_17.toString()
     }
+
     buildFeatures {
         dataBinding true
         viewBinding true
@@ -93,5 +94,7 @@ dependencies {
     // lottie
     implementation "com.airbnb.android:lottie:6.1.0"
 
+    // lifecycle
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
 
 }
