--- a/Swimmer_seller/app/build.gradle
+++ b/Swimmer_seller/app/build.gradle
@@ -78,4 +78,6 @@ dependencies {
     // Glide - 안드로이드용 이미지 로딩 라이브러리
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    // ViewPager2
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
 }
