--- a/Swimmer_customer/build.gradle
+++ b/Swimmer_customer/build.gradle
@@ -7,14 +7,15 @@ buildscript {
     dependencies {
         def nav_version = "2.5.3"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath 'com.android.tools.build:gradle:8.0.2'
     }
 }
 
 
 
 plugins {
-    id 'com.android.application' version '8.1.0' apply false
-    id 'com.android.library' version '8.1.0' apply false
+    id 'com.android.application' version '8.0.2' apply false
+    id 'com.android.library' version '8.0.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
     id 'com.google.gms.google-services' version '4.3.15' apply false
 }
