splashScreen gradle 버전 수정, nav_graph 로직 변경, 화면 전환 애니메이션(slide), 로그아웃 // 로그인 버그수정

--- a/Swimmer_customer/app/build.gradle
+++ b/Swimmer_customer/app/build.gradle
@@ -76,7 +76,7 @@ dependencies {
     implementation("com.tbuonomo:dotsindicator:5.0")
 
     // splashscreen
-    implementation 'androidx.core:core-splashscreen:1.1.0-alpha01'
+    implementation 'androidx.core:core-splashscreen:1.0.1'
 
     // firebase
     implementation 'com.google.firebase:firebase-storage:20.2.1'
