마이페이지 닉네임 표시, 프로필 사진 등록, ui 수정

--- a/Swimmer_customer/app/build.gradle
+++ b/Swimmer_customer/app/build.gradle
@@ -99,4 +99,10 @@ dependencies {
     // lifecycle
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
 
+    //image
+    implementation 'com.google.firebase:firebase-storage:19.2.2'
+    implementation 'com.google.firebase:firebase-core:19.0.1'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    apply plugin: 'com.google.gms.google-services'
+
 }
