--- a/Swimmer_customer/app/src/main/AndroidManifest.xml
+++ b/Swimmer_customer/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
 
         <activity
             android:name=".ui.main.MainActivity"
+            android:screenOrientation="portrait"
             android:exported="true"
             android:theme="@style/AppTheme.Splash" >
             <intent-filter>
